--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
     </defs>
 
     <g transform="translate(0,0)" id="files-list-container">
+      <!-- الطبقة الخلفية الأساسية -->
       <image 
         data-src="image/wood.webp" 
         x="0" 
@@ -168,7 +169,24 @@
         height="2454"
         aria-hidden="true"
       />
+    </g>
 
+    <g id="dynamic-links-group"></g>
+    <g id="group-specific-content"></g>
+
+    <!-- صورة Upper_wood فوق المحتوى الديناميكي وتحت الأزرار -->
+    <image 
+      data-src="image/Upper_wood.webp" 
+      x="0" 
+      y="0" 
+      width="1024" 
+      height="auto"
+      style="pointer-events: none;"
+      aria-hidden="true"
+    />
+
+    <!-- الأزرار الثابتة في الأعلى -->
+    <g id="fixed-controls-layer">
       <g id="reset-btn" style="cursor: pointer;" role="button" tabindex="0">
         <rect x="654" y="100" width="250" height="50" rx="10" fill="#d32f2f" stroke="#fff" stroke-width="2"/>
         <text 
@@ -218,9 +236,6 @@
         >➡️ إلى الخريطة ➡️</text>
       </g>
     </g>
-
-    <g id="dynamic-links-group"></g>
-    <g id="group-specific-content"></g>
   </svg>
 </div>
 
