--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="app">
-        <!-- 🎯 شاشة التحميل الأولية -->
+        <!-- 🎯 شاشة التحميل الأولية (الجديدة) -->
         <div id="initial-loading-overlay" class="loading-overlay">
             <div class="progress-container">
                 <svg width="200" height="200" viewBox="0 0 150 150">
@@ -36,7 +36,7 @@
             </div>
         </div>
         
-        <!-- 👥 شاشة اختيار المجموعة -->
+        <!-- 👥 شاشة اختيار المجموعة (المحسنة) -->
         <div id="group-selection-screen" class="hidden">
             <h1 class="selection-title">🌟 اختر مجموعتك</h1>
             <div class="groups-container">
